--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "aos": "^2.3.4",
+    "heroicons": "^1.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-gradient-progress": "^1.0.3",
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.17.0",
+    "react-router-hash-link": "^2.4.3",
+    "react-scroll": "^1.9.0",
+    "react-spinners": "^0.13.8",
+    "react-typical": "0.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
