--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
     "heroicons": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
